--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,5 @@ dependencies:
     - pip
     - setuptools
     - matplotlib
-    - jupyterlab
-    - pip:
-      - jupyterlab_latex
+    - numpy
+    - scipy
